Upgrade to HSQLDB 2.7.4